<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>q2</name>
  <version>0.1.0</version>
  <description>Discrete Bayes Localization (Q2 of Assignment 2)</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>q1</depend>
  <depend>a2_common</depend>
  <depend>mujoco_ros2_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
